--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.1.3",
     "bootstrap": "5.2.1",
+    "cors": "^2.8.5",
     "mobx": "6.6.2",
     "mobx-react-lite": "3.4.0",
     "path": "^0.12.7",
