--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "bootstrap": "5.2.1",
     "cors": "^2.8.5",
+    "jwt-decode": "^3.1.2",
     "mobx": "6.6.2",
     "mobx-react-lite": "3.4.0",
     "path": "^0.12.7",
